[tool.poetry]
name = "trackbranch"
version = "0.1.2"
description = "Maintain branch collection profiles for Git repositories"
authors = ["Kevin Morris <kevr@0cost.org>"]
maintainers = ["Kevin Morris <kevr@0cost.org>"]
readme = "README.md"
license = "MIT"
repository = "https://github.com/kevr/trackbranch"
keywords = ["git", "branch", "profiles"]
packages = [
    { include = "trackbranch" },
]

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
trackbranch = "trackbranch.main:main"
